--- a/package.json
+++ b/package.json
@@ -33,13 +33,28 @@
     "swiper": "^10.1.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@tailwindcss/forms": "^0.5.4",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
     "autoprefixer": "^10.4.14",
+    "chai": "^4.2.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.19.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "solidity-coverage": "^0.8.0",
+    "tailwindcss": "^3.3.3",
+    "typechain": "^8.3.0"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": "git@github.com-mendsalbert:mendsalbert/cap1.0.git",
+  "author": "mendsalbert <mendsalbert@gmail.com>"
 }
