--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@netlify/plugin-nextjs": "^4.40.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@tabler/icons-react": "^2.40.0",
     "aos": "^2.3.4",
     "chart.js": "^4.3.2",
