--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
+    "@types/sinon-chai": "^3.2.3",
     "autoprefixer": "^10.4.14",
     "chai": "^4.2.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^6.4.0",
     "hardhat": "^2.19.1",
     "hardhat-gas-reporter": "^1.0.8",
