--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "@netlify/plugin-nextjs": "^4.40.0",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@rainbow-me/rainbowkit": "^1.3.0",
     "@tabler/icons-react": "^2.40.0",
     "aos": "^2.3.4",
     "chart.js": "^4.3.2",
@@ -24,6 +25,7 @@
     "date-fns": "^2.30.0",
     "fullcalendar": "^6.1.9",
     "jsvectormap": "^1.5.3",
+    "lodash": "^4.17.21",
     "next": "13.4.13",
     "next-transpile-modules": "^10.0.1",
     "react": "18.2.0",
@@ -32,7 +34,9 @@
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
     "react-quill": "^2.0.0",
-    "swiper": "^10.1.0"
+    "swiper": "^10.1.0",
+    "wagmi": "^1.4.7",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
