--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@tabler/icons-react": "^2.40.0",
+    "@wagmi/core": "^1.4.7",
     "aos": "^2.3.4",
     "chart.js": "^4.3.2",
     "daisyui": "^4.4.4",
@@ -35,6 +36,7 @@
     "react-google-maps": "^9.4.5",
     "react-quill": "^2.0.0",
     "swiper": "^10.1.0",
+    "viem": "^1.19.9",
     "wagmi": "^1.4.7",
     "web3.storage": "^4.5.5"
   },
