--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-google-maps": "^9.4.5",
     "react-quill": "^2.0.0",
     "swiper": "^10.1.0",
+    "viem": "^1.19.9",
     "wagmi": "^1.4.7",
     "web3.storage": "^4.5.5"
   },
