--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
     "react-quill": "^2.0.0",
     "swiper": "^10.1.0",
