--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@headlessui/react": "^1.7.17",
     "@netlify/plugin-nextjs": "^4.40.0",
+    "@nextui-org/react": "^2.2.9",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@tabler/icons-react": "^2.40.0",
