--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.3.2",
     "daisyui": "^4.4.4",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.7",
     "fullcalendar": "^6.1.9",
     "jsvectormap": "^1.5.3",
     "lodash": "^4.17.21",
