--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@tabler/icons-react": "^2.40.0",
+    "@web3-storage/w3up-client": "^11.2.0",
     "aos": "^2.3.4",
     "chart.js": "^4.3.2",
     "daisyui": "^4.4.4",
