--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.7",
     "fullcalendar": "^6.1.9",
+    "ipfs-http-client": "^60.0.1",
     "jsvectormap": "^1.5.3",
     "lodash": "^4.17.21",
     "next": "13.4.13",
@@ -41,8 +42,7 @@
     "react-quill": "^2.0.0",
     "swiper": "^10.1.0",
     "viem": "^1.19.9",
-    "wagmi": "^1.4.7",
-    "web3.storage": "4.5.4"
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
