--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@netlify/plugin-nextjs": "^4.40.0",
     "@nextui-org/react": "^2.2.9",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@tabler/icons-react": "^2.40.0",
     "@web3-storage/w3up-client": "^11.2.0",
@@ -26,6 +27,8 @@
     "chart.js": "^4.3.2",
     "daisyui": "^4.4.4",
     "date-fns": "^2.30.0",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^10.16.7",
     "fullcalendar": "^6.1.9",
     "ipfs-http-client": "^60.0.1",
