--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aos": "^2.3.4",
     "chart.js": "^4.3.2",
     "daisyui": "^4.4.4",
+    "date-and-time": "^3.0.3",
     "date-fns": "^2.30.0",
     "form-data": "^4.0.0",
     "formidable": "^3.5.1",
