--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.21",
     "next": "13.4.13",
     "next-transpile-modules": "^10.0.1",
+    "openai": "^4.20.1",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
