--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "daisyui": "^4.4.4",
     "date-and-time": "^3.0.3",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "form-data": "^4.0.0",
     "formidable": "^3.5.1",
     "framer-motion": "^10.16.7",
